# microwave-pipeline

./: .env.example  .gitignore  README.md  ROADMAP.md  determinism-and-llms.md  microwave-pipeline-improvements.md  pyproject.toml  spec-llm-providers-and-health-baa.md
deploy/: com.microwaveos.daemon.plist  com.microwaveos.daemon.plist.template
docs/: _excalidraw_lib.py  _gen_architecture.py  _gen_health_profile.py  _gen_health_routing.py  _gen_request_routing.py  architecture-health-profile.excalidraw  architecture-health-routing.excalidraw  architecture-request-routing.excalidraw  architecture.excalidraw
prompts/: morning-briefing.txt  substack-notes.txt
scripts/: _briefing_skill_staged.md  _repoint_morning_briefing.py  weekly_pipeline_report.py
seed_skills/: README.md
src/: config.py  db.py  frontmatter.py  import_data.py  main.py
tests/: test_assembly.py  test_bedrock_provider.py  test_breadcrumbs.py  test_consolidation.py  test_consolidation_f3.py  test_contradictions.py  test_conversational.py  test_file_extract.py  test_files_tool.py  test_github.py  test_health_audit.py  test_health_cli.py  test_health_config.py  test_health_disclaimers.py  test_health_medlineplus.py  test_health_pubmed.py  test_health_query_rewrite.py  test_health_retrieval.py  test_health_router.py  test_heartbeat.py  test_instacart.py  test_json_utils.py  test_llm_builtin_tools.py  test_llm_factory.py  test_llm_provider.py  test_llm_selector.py  test_llm_session.py  test_llm_vision.py  test_memory_health.py  test_memory_write.py  test_near_provider.py  test_pdf_extract.py  (+32 more)
(+107 files in other folders)
